--- a/packages/archer/package.json
+++ b/packages/archer/package.json
@@ -1,17 +1,26 @@
 {
-  "name": "n-build",
+  "name": "archer",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "bin": {
-    "babel-build": "./build.js"
+    "archer": "./bin/index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node scripts/build.js"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "dotenv": "^6.2.0",
+    "is-windows": "^1.0.2",
+    "resolve-cwd": "^2.0.0",
+    "signale": "^1.3.0",
+    "slash2": "^2.0.0",
+    "update-notifier": "^2.5.0",
+    "yargs-parser": "^13.0.0",
+    "n-build-dev": "1.4.4"
+  },
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.3.0",
