--- a/packages/babel-tool/package.json
+++ b/packages/babel-tool/package.json
@@ -1,26 +1,17 @@
 {
-  "name": "n",
+  "name": "babel-tool",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "bin": {
-    "archer": "./bin/index.js"
+    "babel-build": "./build.js"
   },
   "scripts": {
-    "build": "node scripts/build.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "dotenv": "^6.2.0",
-    "is-windows": "^1.0.2",
-    "resolve-cwd": "^2.0.0",
-    "signale": "^1.3.0",
-    "slash2": "^2.0.0",
-    "update-notifier": "^2.5.0",
-    "yargs-parser": "^13.0.0",
-    "n-build-dev": "1.4.4"
-  },
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.3.0",
