--- a/packages/archer/package.json
+++ b/packages/archer/package.json
@@ -14,12 +14,12 @@
   "dependencies": {
     "dotenv": "^6.2.0",
     "is-windows": "^1.0.2",
+    "n-build-dev": "^1.0.0",
     "resolve-cwd": "^2.0.0",
     "signale": "^1.3.0",
     "slash2": "^2.0.0",
     "update-notifier": "^2.5.0",
-    "yargs-parser": "^13.0.0",
-    "n-build-dev": "^1.0.0"
+    "yargs-parser": "^13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
