--- a/packages/n-webpack/package.json
+++ b/packages/n-webpack/package.json
@@ -121,5 +121,6 @@
       "src/socket.js",
       "src/patchConnection.js"
     ]
-  }
+  },
+  "gitHead": "9bd2cc70679d789282fd1694bd48a7579a347250"
 }
