--- a/packages/babel-tool/package.json
+++ b/packages/babel-tool/package.json
@@ -24,5 +24,6 @@
     "rimraf": "^2.6.3",
     "through2": "^3.0.1",
     "vinyl-fs": "^3.0.3"
-  }
+  },
+  "gitHead": "9bd2cc70679d789282fd1694bd48a7579a347250"
 }
